<resources>
    <string name="app_name">My Landscape Application</string>

    <string name="fragment_list">List Fragment</string>
    <string name="fragment_detail">Detail Fragment</string>
    <string name="fragment_edit">Edit Fragment</string>
    <string name="fragment_add">Add Fragment</string>
    <string name="fragment_map">Map Fragment</string>
    <string name="fragment_search">Search Fragment</string>

    <string name="list">List</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="map"> Maps</string>
    <string name="search">Search</string>

</resources>